# ALTSS

./: .gitignore  README.md
.github/workflows/: ci.yml
spice_analysis/: .coverage  pyproject.toml  pytest.ini
spice_analysis/.github/workflows/: ci.yml
spice_analysis/data/schematics/: ac_daempfer.cir  lc_resonanz.asc  rc_tiefpass.asc  rc_tiefpass_2ord.asc  spannungsteiler.asc  spannungsteiler.cir
spice_analysis/src/spice_analysis/: __init__.py  analysis.py  models.py  parser.py
spice_analysis/tests/: conftest.py  test_ac_daempfer.py  test_analysis.py  test_parser.py  test_regression_raw.py  test_spannungsteiler.py
