[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spice_analysis"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.13",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov", "ruff"]

[tool.hatch.build.targets.wheel]
packages = ["src/spice_analysis"]

[tool.ruff]
line-length = 88
